2004-06-16 TADA Tadashi <sho@spc.gr.jp>
	* add zh (Traditional Chinese) language resources. thanks Hiroshi Yui <thinker60@mail2000.com.tw>.

2004-06-15 Tue UECHI Yasumasa <uechi@potaway.net>
	* rd_style.rb: remove <p> tags in manufacture(*_to_html) only subtitles is given.

2004-06-09 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: remove debug code.

2004-05-22 zunda <zunda at freeshell.org>
	* tdiary.conf.sample: English notice at the top.

2004-05-22 TADA Tadashi <sho@spc.gr.jp>
	* default.css, tdiary1.css: add '@charset "euc-jp";'.

2004-05-20  Kazuhiko  <kazuhiko@fdiary.net>
	* skel/mail.rtxt, skel/mail.rtxt.en: separate each address by
	comma.

2004-05-20 TADA Tadashi <sho@spc.gr.jp>
	* mail.rtxt.en: against empty @author_mail or @author_name.
	* tdiary.rb: catch exceptions when cannot delete cache files.

2004-05-19 ZnZ <zn@mbf.nifty.com>
	* 00default.rb, mail.rtxt: against empty @author_mail or @author_name.

2004-05-16 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/wiki/wiki_parser.rb: ignore any elements in plugin.
	* tdiary.conf.sample: add self URL into @no_referer. thanks ZnZ <zn@mbf.nifty.com>.

2004-05-14 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt: support absolute path of @conf.index.

2004-05-09 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: support absolute path of @conf.index.
	* skel/i.diary.rhtml: show TSUKKOMI body length 100 to 200 chars.

2004-05-05 TADA Tadashi <sho@spc.gr.jp>
	* misc: move posttdiary.rb and tdiary-mode to contrib package.
	* release 1.5.7.

2004-05-05  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/etdiary/etdiary_style.rb: fix a bug that causes a
	problem in 'to_html' without options.

2004-05-04  Kazuhiko  <kazuhiko@fdiary.net>
	* skel/update.rhtml: display an e-mail address of comment if
	exists.

2004-05-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: remove to add '...' after using Config#shorten.

2004-04-19 ZnZ <zn@mbf.nifty.com>
	* tdiary.rb: add error information to eval.

2004-04-19 TADA Tadashi <sho@spc.gr.jp>